# nncg

./: CHANGELOG.md  CITATION.cff  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: rhiza_release.yml
.rhiza/: template.yml
book/marimo/notebooks/: 01_active_set_methods.py  02_equality_constraints.py  03_test_problems.py  04_alternative_solvers.py  04_mprgp_vs_active_set.py  04_solver_comparison.py
docs/: api.md  index.md
src/nncg/: __init__.py  _active_set.py  _equality.py  api.py  certificate.py  inner.py  krylov.py  mprgp.py  precond.py  preconditioners.py  problems.py  solver.py
tests/: __init__.py  baselines.py  problems.py  test_api.py  test_baselines.py  test_eq.py  test_fallback.py  test_free_matvec.py  test_krylov.py  test_operators.py  test_package_metadata.py  test_precond.py  test_problems.py  test_solver.py
tests/benchmarks/: __init__.py  compare.py
tests/test_nncg/: __init__.py  test_api.py  test_inner.py  test_krylov.py  test_mprgp.py  test_solver.py
tests/test_paper/: __init__.py  test_cg_convergence.py  test_conditioning.py  test_reduction.py  test_results.py
